fix list jumping

--- a/src/styles/cf/ui/control-elements/cf-control-elements.styl
+++ b/src/styles/cf/ui/control-elements/cf-control-elements.styl
@@ -11,7 +11,7 @@ cf-input-control-elements
 	z-index 0
 	user-select none
 	visibility hidden
-	height 0px
+	height auto
 
 	.cf-button
 		margin-bottom 10px
@@ -51,7 +51,7 @@ cf-input[tag-type="file"]
 
 cf-list
 	display block
-	height 0px
+	height auto
 	cursor move
 	white-space nowrap
 
